--- a/security_teaching/Story1/Purpose1.html
+++ b/security_teaching/Story1/Purpose1.html
@@ -3,10 +3,20 @@
 <head>
 <title>Story</title>
 <meta charset="utf-8">
+<script src = "../jquery-3.4.1.min.js"></script>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="">
 
 </head>
 <body>
+<script>
+//正解メアドの情報を向こうに渡す?
+
+
+
+
+
+</script>
 <h1>概要を説明します。</h1>
 <p>このお話ではとあるメールアドレスから送られてきたメールを閲覧するお話です。</p>
 <p>しかし、すべてのメールが安全というわけではありません。怪しかったりやばいメールが多く存在します</p>
