スクリーン微調整

--- a/security_teaching/Story1/Purpose1.html
+++ b/security_teaching/Story1/Purpose1.html
@@ -20,7 +20,7 @@
 <h1>概要を説明します。</h1>
 <p>このお話ではとあるメールアドレスから送られてきたメールを閲覧するお話です。</p>
 <p>しかし、すべてのメールが安全というわけではありません。怪しかったりやばいメールが多く存在します</p>
-<p>その中から目的のメールを開き、読みましょう</p>
+<p>その中から目的のメールを開き、読みましょう。今回は分かりやすくするために、実際の物より、誇大に表現している箇所があります。</p>
 <a href="Screen1.html">実際にやってみる</a>
 
 </body>
