--- a/security_teaching/Story1/Screen1.html
+++ b/security_teaching/Story1/Screen1.html
@@ -3,10 +3,10 @@
 <head>
 <title></title>
 <meta charset="utf-8">
-<script src = "../jquery-3.4.1.min.js"  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+<!--<script src = "jquery-3.4.1.min.js"  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
 crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-csv/1.0.5/jquery.csv.min.js"></script>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1">-->
 <link rel="stylesheet" href="css/normalize.css">
 <link rel="stylesheet" href="css/style.css">
 </head>
@@ -44,17 +44,16 @@ $(function(){
 */
 
 //判定
-$(document).ready(function(){
-    //正解だったら正解画面へ、違ったら不正解画面へ遷移する
-    $(".address").click(function(){
-        var ansnum = $(this).index()+1;
-        if(ansnum == 1){
-            window.location.href='Yes1.html';
-        }else{
-            window.location.href='No1.html';
-        }
-    });
-});
+//正解だったらYES,間違ってたらNOに飛ばす。
+var num = 0;
+document.getById("address").onclick = function(){
+	/*
+	if(){
+
+	}
+	*/
+}
+
 
 </script>
 <h2>アドレス[test@email.com]から来たメールを開きなさい。</h2>
