解説は別に

--- a/security_teaching/Story1/Yes1.html
+++ b/security_teaching/Story1/Yes1.html
@@ -10,9 +10,10 @@
 </head>
 <body>
 <h1>正解画面</h1>
-<p>解説</p>
-
-<!--<a href="../Top.html">戻る</a>-->
-<a href="Screen1.html">戻る(前の画面)</a>
+<p>あなたは騙されずに、正解の物を開きました。本物を見分ける力があるようですね！<br>
+最近は情報を搾取するために偽のメールが送られてくることも増えています。<br>
+次のページで少し解説をしているので、見ていただけるとありがたいです。
+</p>
+<a href="Commentary.html">解説ページへゆく</a>
 </body>
 </html>
