--- a/security_teaching/Story1/No1.html
+++ b/security_teaching/Story1/No1.html
@@ -8,8 +8,11 @@
 </head>
 <body>
 <h1>はずれ画面</h1>
-<h2>解説</h2>
-<p></p>
+<p>残念ながらあなたは正解のメールではないものを選びました。<br>
+実際に、送られてくるメール全てがヤバいメールという事はほぼほぼ無いですが、何百、何千通の中に、<br>
+一通だけ怪しいメールが紛れ込んでいて、うっかりそれを開いてしまうこともあるかもしれません。
+次のページでは、少し解説を入れてるので、読んで頂けるとありがたいです。
+</p>
 
 <a href="Screen1.html">戻る(前の画面)</a>
 
