ちょい修正

--- a/security_teaching/Story1/Purpose1.html
+++ b/security_teaching/Story1/Purpose1.html
@@ -9,18 +9,11 @@
 
 </head>
 <body>
-<script>
-//正解メアドの情報を向こうに渡す?
-
-
-
-
-
-</script>
+<script></script>
 <h1>概要を説明します。</h1>
 <p>このお話ではとあるメールアドレスから送られてきたメールを閲覧するお話です。</p>
 <p>しかし、すべてのメールが安全というわけではありません。怪しかったりやばいメールが多く存在します</p>
-<p>その中から目的のメールを開き、読みましょう。今回は分かりやすくするために、実際の物より、誇大に表現している箇所があります。</p>
+<p>その中から目的のメールを開き、読みましょう。今回は分かりやすくするために、実際の物より、簡略化している所もあります。</p>
 <a href="Screen1.html">実際にやってみる</a>
 
 </body>
