ちょい修正

--- a/security_teaching/Top.html
+++ b/security_teaching/Top.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <h1>儂が考えたセキュリティ教材</h1>
-<h2>内容物</h2>
+<p>教材という事で、いろいろな場面が想定されます。今はメールのみです。今後増やしたりしていく予定です。</p>
 <ul>
 	<li><a href="Story1/Purpose1.html">メール物</a></li>
 	<!--
