--- a/security_teaching/Story1/No1.html
+++ b/security_teaching/Story1/No1.html
@@ -14,7 +14,7 @@
 次のページでは、少し解説を入れてるので、読んで頂けるとありがたいです。
 </p>
 
-<a href="Screen1.html">戻る(前の画面)</a>
+<a href="Commentary.html">解説</a>
 
 </body>
 </html>
