--- a/security_teaching/Story1/Commentary.html
+++ b/security_teaching/Story1/Commentary.html
@@ -13,11 +13,51 @@
 ではもし感染したと思われた場合はどうしたら良いのかを下に書いていきます
 </p>
 
+<hr>
+
 <h3>手順①</h3>
 <p>感染したと思われるPCをオフライン化する</p>
 <p>オフライン化、というのはネットワークから切断することです。無線の場合は、設定から切断し<br>
-有線の場合は、繋いでるLANケーブルを引っこ抜きます。
+有線の場合は、繋いでるLANケーブルを引っこ抜きます。これを行うことで、感染したPCから他のPCへの<br>
+二次感染を防ぐことが出来ます。この作業は感染が確認されたら迅速に行いましょう。早ければ早いほど効果があります
 </p>
+
+<hr>
+
+<h3>手順②</h3>
+<p>そして、ネットワークからの隔離が終わったら、まずは企業の場合は上司やセキュリティ担当者、<br>
+IT部門の担当者に報告、個人のPCだったら、家族や友人のITに詳しい人に報告をしましょう。<br>
+もし、詳しい人が周りにいなかった場合は、IPAが開設している[情報セキュリティ安心相談窓口]にメールや電話で相談<br>
+する手もある。
+</p>
+
+<hr>
+
+<h3>手順③</h3>
+<p>ネットからの隔離が終わったら、次にそのPCをどうにかします。</p>
+<p>とりあえず、まずは入れているであろうウイルス対策ソフトを起動し、PCのチェックをします。</p>
+<p>そして、ソフトの指示通りにマルウェアを隔離、駆除します。ここまででマルウェアを駆除できれば、これでおしまいです</p>
+
+<hr>
+
+<h3>手順EX</h3>
+<p>もし対策ソフトを駆使しても駆除出来なかった場合、PCの初期化を行います。<br>
+初期化してしまえば、PCに保存しているものすべてが全てなくなってしまうが、マルウェアも同時に消すことができる<br>
+しかし、日常的にバックアップを取っていないと、治ってもかなり前のデータになったり<br>
+最悪購入時と同じ状態になってしまいます。これを防ぐためにもバックアップは日常的に取っておきましょう。
+</p>
+
+<hr>
+
+<h3>予防する</h3>
+<p>
+そもそもマルウェアに感染しないように日常的に対策するのが最も効果的である。まずは、セキュリティソフトを導入すること。<br>
+次は、このセキュリティソフトを最新の状態にし続けることです。また、セキュリティソフトだけでなく、今使てるOS<br>
+も最新の状態にすることも重要です。
+</p>
+
+
+
 <a href="Purpose1.html">戻る</a>
 
 </body>
