--- a/security_teaching/Story1/Screen1.html
+++ b/security_teaching/Story1/Screen1.html
@@ -73,15 +73,22 @@
 <script>
 	/**/
 	//判定
+	var ans_flag = false;
 	$('#address').click(function(){
-		var changeFrom = false;
 		$('.a1').on('click',function(){
-			console.log('a1がクリックされた');
-			$(window).on('beforeunload',function(){
-				if(changeFrom) return 'このアドレスを選びますか？ \n本当に？'; 
-			})
-			
+			ans_flag = true;
+			console.log('a1がクリックされた');//確認用
+			if(confirm('このアドレスでよろしいですか?')){
+				window.location.href = "Yes1.html";
+			}
+			ans_flag = false;
 		});
+
+		if(ans_flag == true){
+			if(confirm('このアドレスで?')){
+				window.location.href = "No1.html";
+			}
+		}	
 		console.log('クリックされたぞ');//確認用
 	});
 	
