--- a/security_teaching/Story1/Commentary.html
+++ b/security_teaching/Story1/Commentary.html
@@ -8,12 +8,22 @@
 </head>
 <body>
 <h1>解説画面</h1>
-<p>では、実際にヤヴァイメールを開いたらどうすれば良いのかを簡単に説明します。<br>
+<p>では、怪しいメールの見分け方や、実際にヤヴァイメールを開いたらどうすれば良いのかを簡単に説明します。<br>
 まず、メールの場合マルウェアに感染しうるケースというのは、そのメールに添付されているファイルを開いたときが多いです<br>
 ではもし感染したと思われた場合はどうしたら良いのかを下に書いていきます
 </p>
 
 <hr>
+
+<h3>見分け方について</h3>
+<p>
+    今では昔のメールに比べて、メールの内容が作りこまれてて受信者に不信感を抱かせないように<br>
+    なっている物が増えています。まず、メールが届いた際に、差出人が実在する企業や友人等で<br>
+    も添付ファイルがあったりした場合はいったん疑いましょう。そして、その企業で<br>
+    注意喚起が行われていたりしないかも確認しましょう。そして、メールは必ずしも差出人<br>
+    本人から送られてきたメールとは限らないという事を覚えておきましょう。
+</p>
+
 
 <h3>手順①</h3>
 <p>感染したと思われるPCをオフライン化する</p>
