メアドをテスト用から変更

--- a/security_teaching/Story1/Screen1.html
+++ b/security_teaching/Story1/Screen1.html
@@ -32,20 +32,24 @@
 		<!--アドレスリスト-->
 		<ul id="address">
 			<div class="a1">
-				<li>test@email.com</li>
-				<li class="subject">testsubject1</li>
+				<li>agyfcm@email.com</li>
+				<li class="subject">bank transaction</li>
 			</div>
 			<div class="a2">
-				<li>tes2@email.com</li>
-				<li class="subject">testsubject1</li>
+				<li>Mueller66@seriouseters.com</li>
+				<li class="subject">bank transaction</li>
 			</div>
 			<div class="a3">
-				<li>Test@email.com</li>
-				<li class="subject">testsubject1</li>
+				<li>abeckhome@yahoo.co.jp</li>
+				<li class="subject">ご注文受付メール</li>
 			</div>
 			<div class="a4">
-				<li>test@yatta.com</li>
-				<li class="subject">testsubject1</li>
+				<li>Battle.65@static.vpn.com</li>
+				<li class="subject">Tax invoice</li>
+			</div>
+			<div class="a5">
+				<li>Shoe_ss@oregano.ne.jp</li>
+				<li class="subject">注文書</li>
 			</div>
 		</ul>
 	</ul>
