アドレス追加&デザイン微調整

--- a/security_teaching/Story1/Screen1.html
+++ b/security_teaching/Story1/Screen1.html
@@ -19,6 +19,7 @@
 			<div class="logo">MailBox</div>
 		</div><!--/.header-inner-->
 	</div><!--/.container-->
+	<hr>
 </header>
 <nav>	
 	<div class="container">
@@ -30,6 +31,7 @@
 	<main>
 		<!--コンテンツ-->
 		<!--アドレスリスト-->
+
 		<ul id="address">
 			<div class="a1">
 				<li>agyfcm@email.com</li>
@@ -49,6 +51,18 @@
 			</div>
 			<div class="a5">
 				<li>Shoe_ss@oregano.ne.jp</li>
+				<li class="subject">注文書</li>
+			</div>
+			<div class="a6">
+				<li>Shoe_ss@oregano.ne.jp</li>
+				<li class="subject">注文書</li>
+			</div>
+			<div class="a7">
+				<li>Muno.667@mayenllimannning.com</li>
+				<li class="subject">注文書</li>
+			</div>
+			<div class="a8">
+				<li>Cole.567777@lightstylefamerica.com</li>
 				<li class="subject">注文書</li>
 			</div>
 		</ul>
