見やすいように調整

--- a/security_teaching/Story1/Screen1.html
+++ b/security_teaching/Story1/Screen1.html
@@ -37,33 +37,45 @@
 				<li>agyfcm@email.com</li>
 				<li class="subject">bank transaction</li>
 			</div>
+
 			<div class="a2">
 				<li>Mueller66@seriouseters.com</li>
 				<li class="subject">bank transaction</li>
 			</div>
+
 			<div class="a3">
 				<li>abeckhome@yahoo.co.jp</li>
 				<li class="subject">ご注文受付メール</li>
 			</div>
+
 			<div class="a4">
 				<li>Battle.65@static.vpn.com</li>
 				<li class="subject">Tax invoice</li>
 			</div>
+
 			<div class="a5">
 				<li>Shoe_ss@oregano.ne.jp</li>
 				<li class="subject">注文書</li>
 			</div>
+
+			<div class="a8">
+				<li>Biccamera@Biccamera.com</li>
+				<li class="subject">台数限定!お買い得商品を多数ご用意！</li>
+			</div>
+
 			<div class="a6">
 				<li>Shoe_ss@oregano.ne.jp</li>
 				<li class="subject">注文書</li>
 			</div>
+
 			<div class="a7">
 				<li>Muno.667@mayenllimannning.com</li>
 				<li class="subject">注文書</li>
 			</div>
+
 			<div class="a8">
 				<li>Cole.567777@lightstylefamerica.com</li>
-				<li class="subject">注文書</li>
+				<li class="subject">災害対策について</li>
 			</div>
 		</ul>
 	</ul>
