確認用コメント削除

--- a/security_teaching/Story1/Screen1.html
+++ b/security_teaching/Story1/Screen1.html
@@ -105,7 +105,7 @@
 	//判定
 	$('#address').click(function(){
 		$('.a1').on('click',function(){
-			console.log('a1がクリックされた');//確認用
+			//console.log('a1がクリックされた');//確認用
 			if(confirm('このアドレスでよろしいですか?')){
 				window.location.href = "Yes1.html";
 			}
@@ -116,7 +116,7 @@
 			}
 		}
 	
-		console.log('クリックされたぞ');//確認用
+		//console.log('クリックされたぞ');//確認用
 	});
 	
 	</script>
