--- a/security_teaching/Story1/Screen1.html
+++ b/security_teaching/Story1/Screen1.html
@@ -37,42 +37,42 @@
 				<li>agyfcm@email.com</li>
 				<li class="subject">bank transaction</li>
 			</div>
-
+			<hr>
 			<div class="a2">
 				<li>Mueller66@seriouseters.com</li>
 				<li class="subject">bank transaction</li>
 			</div>
-
+			<hr>
 			<div class="a3">
 				<li>abeckhome@yahoo.co.jp</li>
 				<li class="subject">ご注文受付メール</li>
 			</div>
-
+			<hr>
 			<div class="a4">
 				<li>Battle.65@static.vpn.com</li>
 				<li class="subject">Tax invoice</li>
 			</div>
-
+			<hr>
 			<div class="a5">
 				<li>Shoe_ss@oregano.ne.jp</li>
 				<li class="subject">注文書</li>
 			</div>
-
+			<hr>
 			<div class="a8">
 				<li>Biccamera@Biccamera.com</li>
 				<li class="subject">台数限定!お買い得商品を多数ご用意！</li>
 			</div>
-
+			<hr>
 			<div class="a6">
 				<li>Shoe_ss@oregano.ne.jp</li>
 				<li class="subject">注文書</li>
 			</div>
-
+			<hr>
 			<div class="a7">
 				<li>Muno.667@mayenllimannning.com</li>
 				<li class="subject">注文書</li>
 			</div>
-
+			<hr>
 			<div class="a8">
 				<li>Cole.567777@lightstylefamerica.com</li>
 				<li class="subject">災害対策について</li>
@@ -96,7 +96,7 @@
 	<div class="container">
 		<div class="footer-inner">
 		<!--フッター-->
-		<p class="copyright">footer ©20XX HTML/CSS Technic</p>
+		<!--<p class="copyright">footer ©20XX HTML/CSS Technic</p>-->
 		</div><!--/.footer-inner-->
 	</div><!--/.container-->
 </footer>
