--- a/security_teaching/Story1/Screen1.html
+++ b/security_teaching/Story1/Screen1.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-<h2>アドレス[test@email.com]から来たメールを開きなさい。</h2>
+<h2>アドレス[XXXX]から来たメールを見つけなさい。</h2>
 <header>
 	<div class="container">
 		<div class="header-inner">
