いろいろ追加

--- a/security_teaching/Story1/Commentary.html
+++ b/security_teaching/Story1/Commentary.html
@@ -24,6 +24,15 @@
     本人から送られてきたメールとは限らないという事を覚えておきましょう。
 </p>
 
+<h3>メールの特徴</h3>
+<p>
+    まず見るべき場所はメールの件名です。その件名には受信者を不安にする文言が書かれている事が多いです。<br>
+    たとえば、「緊急」や「重要」などです。これは受信者を焦らせ、メールの真偽を吟味させないようにします。<br>
+    ですが、ここで焦ってはいけません。まずは落ち着いて宛先を確認することです。この宛先が見覚えが無い場合は間違いなく黒です<br>
+
+</p>
+
+<hr>
 
 <h3>万が一PCがマルウェアに感染したら？</h3>
 <h3>手順①</h3>
