--- a/security_teaching/Story1/Screen1.html
+++ b/security_teaching/Story1/Screen1.html
@@ -11,12 +11,14 @@
 </head>
 <body>
 
-<h2>アドレス[XXXX]から来たメールを見つけなさい。</h2>
+<h2>アドレス[Smallcamera@Biccamera.com]から来たメールを見つけなさい。</h2>
 <header>
 	<div class="container">
 		<div class="header-inner">
 			<!--ヘッダー-->
-			<div class="logo">MailBox</div>
+			<div class="logo">
+				<h1>MailBox</h1>
+			</div>
 		</div><!--/.header-inner-->
 	</div><!--/.container-->
 	<hr>
@@ -43,6 +45,11 @@
 				<li class="subject">bank transaction</li>
 			</div>
 			<hr>
+			<div class="a8">
+				<li>Smal1camera@Smal1camera.com</li>
+				<li class="subject">台数限定!お買い得商品を多数ご用意！</li>
+			</div>
+			<hr>
 			<div class="a3">
 				<li>abeckhome@yahoo.co.jp</li>
 				<li class="subject">ご注文受付メール</li>
@@ -59,7 +66,7 @@
 			</div>
 			<hr>
 			<div class="a8">
-				<li>Biccamera@Biccamera.com</li>
+				<li>Smallcamera@Biccamera.com</li>
 				<li class="subject">台数限定!お買い得商品を多数ご用意！</li>
 			</div>
 			<hr>
