若干やぁ変更

--- a/security_teaching/Story1/Purpose1.html
+++ b/security_teaching/Story1/Purpose1.html
@@ -13,7 +13,7 @@
 <h1>概要を説明します。</h1>
 <p>このお話ではとあるメールアドレスから送られてきたメールを探すお話です。</p>
 <p>しかし、すべてのメールが安全というわけではありません。怪しかったりやばいメールが存在します</p>
-<p>その中から目的のメールを見つけましょう。今回は分かりやすくするために、実際の物より、簡略化している所もあります。</p>
+<p>その中から目的のメールを見つけましょう。今回は分かりやすくするために、実際の物より、簡略化および誇張している部分があります。</p>
 <a href="Screen1.html">実際にやってみる</a>
 
 </body>
